[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.0"
openpyxl = "^3.1.5"
pandas = "^2.3.0"
plotly = "^6.1.2"
streamlit-sortables = "^0.3.1"
streamlit = "^1.45.1"

[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "streamlit-sortables>=0.3.1",
    "streamlit>=1.45.1",
]
